# linear_equation_solver_in_Cpp

./: .gitignore  CMakeLists.txt  Linear Equations Solving.slnx  README.md  report.docx
Linear Equations Solving/: .cpp  CMakeLists.txt  Command.h  Equation.h  EquationGenerator.cpp  EquationGenerator.h  GaussianSolver.h  Linear Equations Solving.cpp  Linear Equations Solving.vcxproj  Linear Equations Solving.vcxproj.filters  LinearSystem.cpp  LinearSystem.h  Matrix.h  Vector.cpp  Vector.h
